See this time around

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="eu" lang="eu-ES">
   <head>
@@ -19,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="./gila-screen.css" media="screen" title="Gila (screen)" />
     <link rel="stylesheet" type="text/css" href="./gila-print.css" media="print" />
 
-    <title>Lemoako Harrobi Futbol Elkartea </title>
+    <title>Lemoako Harrobi Futbol Erakundea </title>
     <style type="text/css">
 <!--
 .style1 {color: #C1FF64}
@@ -35,29 +36,35 @@
 
     <div id="header">
       <h1 class="headerTitle">
-        <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Elkartea</span></a>
+        <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Erakundea</span></a>
       </h1>
 
       <div class="subHeader">
         <span class="doNotDisplay">Navigation: </span>
-        <a href="./index.html">Direktiba</a> |
+        <!--<a href="./index.html">Direktiba</a> |
         <a href="./index.html">Jokalariak</a> |
-        <a href="./index.html">Helburuak</a> 
+        <a href="./index.html">Helburuak</a> -->
       </div>
     </div>
 
     <div id="side-bar">
       <!-- ##### Left Sidebar ##### -->
       <div class="leftSideBar">
-        <p class="sideBarTitle">Web-ean interesgarria</p>
-        <ul>
-          <li><a href="http://zebixe.com">Zebixe</a></li>
-        </ul>
         <p class="sideBarTitle">Iragarkiak</p>
         <ul>
           <li>
-	    <a href="http://www.lemoa.net/eu-ES/Orrialdeak/default.aspx" alt="Lemoako udala">
-	      <img src="lemoa_logo.png"
+	    <a href="http://www.lemoa.net/eu-ES/Orrialdeak/default.aspx" >
+	      <img src="lemoa_logo.png" alt="Lemoako udala"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://restauranteamboto.com" >
+	      <img src="amboto.png" alt="Restaurante Amboto"/>
+	    </a>
+	  </li>
+	  <li style="background-color:#000;">
+	    <a href="http://imprentabikain.com" >
+	      <img src="logo-bikain.png" alt="Imprenta bikain"/>
 	    </a>
 	  </li>
         </ul>
@@ -70,12 +77,8 @@
 
       <div class="rightSideBar">
         <p class="sideBarTitle">Berriak</p>
-        <div class="sideBarText"><strong>2012.eko Abuztuak 27</strong><br />
-	  Zabalik dago 2012-2013 denboraldirako izen ematea. Izena emateko Magurekin kontaktatu
-	</div>
-
         <div class="sideBarText"><strong>2012.eko Uztailak 25</strong><br />
-          Sortu da Lemoako gazteentzako futbol talde berria!
+          Athletic - Osasuna partidarako sarrera 2 eta Amboto jatetxean afari 2 lortzeko aukera. Erosi gure errifak!
 	</div>
 
         <p class="sideBarTitle">Balidazioa</p>
@@ -94,7 +97,7 @@
       </p>
       <p>Gure helburu eta nahia, Lemoako gaztei futbolean jolastu eta ikasteko aukerak zabaltzea da.
       
-
+<!--
       <h1 id="stylesheets">Taldeak</h1>
       <dl>
         <dt>Kadeteak</dt>
@@ -109,7 +112,7 @@
         </dd>
       </dl>
     </div>
-    
+    -->
     <!-- ##### Footer ##### -->
 
     <div id="footer">
