Web update. We need to add Spanish

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <h1 class="headerTitle">
         <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Erakundea</span></a>
       </h1>
-
       <div class="subHeader">
         <span class="doNotDisplay">Navigation: </span>
         <!--<a href="./index.html">Direktiba</a> |
         <a href="./index.html">Jokalariak</a> |
         <a href="./index.html">Helburuak</a> -->
+
       </div>
     </div>
 
@@ -68,10 +68,6 @@
 	    </a>
 	  </li>
         </ul>
-        <p class="sideBarTitle">Komentarioak</p>
-        <span class="sideBarText">
-          Komentarioak eta kritikak ondo artuak izango dira <a href="mailto:iradokizunak@lhft.org" title="Email form">emailez</a>.
-        </span>
       </div>
       <!-- ##### Right Sidebar ##### -->
 
@@ -92,32 +88,48 @@
     <!-- ##### Main Copy ##### -->
 
     <div id="main-copy">
-      <h1 id="introduction" style="border-top: none; padding-top: 0;">Sarrera</h1>
-      <p>Lemoako harrobi futbol taldea, 2012. urtean eta gazte gogotxu batzuen lanaren ondorioz sortu den talde bat da.
+      <h1 id="introduction" style="border-top: none; padding-top: 0;">Klubaren datuak</h1>
+      <p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.
       </p>
-      <p>Gure helburu eta nahia, Lemoako gaztei futbolean jolastu eta ikasteko aukerak zabaltzea da.
-      
-<!--
-      <h1 id="stylesheets">Taldeak</h1>
-      <dl>
-        <dt>Kadeteak</dt>
-        <dd>Talde honen arduraduna ...... izango da.
-	</dd>
-        <dt>Alebinak</dt>
-        <dd>Talde honen arduraduna ...... izango da.
-	</dd>
-        <dt>Infantilak</dt>
-        <dd>
-        <dd>Talde honen arduraduna ...... izango da.
-        </dd>
-      </dl>
-    </div>
-    -->
+      <h3>Zuzendaritza</h3>
+      <ul>
+	<li>Presidentea: Alex Maguregi</li>
+	<li>Presidente ordea: Ugaitz Atxutegi</li>
+	<li>Idazkaria: Guruzne Delgado</li>
+	<li>Diruzaina: Eukeni Bikarregi</li>
+	<li>Bocala: Eneko Etxebarria</li>
+	<li>Bocala: Ignacio Kortazar</li>
+	<li>Bocala: Ekain Kortazar</li>
+	<li>Bocala: Ricardo Gonzalez</li>
+	<li>Bocala: Ibai Lekue</li>
+	<li>Bocala: Mikel Garcia</li>
+	<li>Bocala: Jorge Martinez</li>
+	<li>Bocala:  Kepa Larrea</li>
+	<li>Bocala: Unai Etxebarria</li>
+      </ul>
+      <h3>Kirol egitura</h3>
+      <ul>
+	<li>Kirol arduraduna: Eneko Etxebarria</li>
+	<li>Kirol koordinatzailea: Aitor Ateka</li>
+      </ul>
+      <p>
+	Guztira 90 ume daude izen emanda eta 100 inguru izantea estimatzen dugu 7 taldetan banatuta:
+      </p>
+      <ul>
+	<li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
+	<li>2 talde benjamin</li>
+	<li>1 talde alebin</li>
+	<li>1 talde infantil</li>
+      </ul>
+      <h1>Helburuak</h1>
+      <p>
+	Lemoako Harrobi Futbol Erakundea kiroal eta heziketa proiektu bat da. Futbolean erakutziaz, pertsonaren heziketa integrala laguntzea du helburu.
+      </p>
     <!-- ##### Footer ##### -->
 
     <div id="footer">
       <div class="doNotPrint">
-        <a href="./index.html">Iradokizunak</a> 
+        Iradokizunak: iradokizunak@lemoakoharrobife.org
         <br />
 		<!--This theme is free for distriubtion,  so long as  link to openwebdesing.org and www.best10webhosting.net  stay on the theme-->
     <span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a> &amp; 
