--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
 	<li>Presidente ordea: Ugaitz Atxutegi</li>
 	<li>Idazkaria: Guruzne Delgado</li>
 	<li>Diruzaina: Eukeni Bikarregi</li>
-	<li>Bocala: Eneko Etxebarria</li>
-	<li>Bocala: Ignacio Kortazar</li>
-	<li>Bocala: Ekain Kortazar</li>
-	<li>Bocala: Ricardo Gonzalez</li>
-	<li>Bocala: Ibai Lekue</li>
-	<li>Bocala: Mikel Garcia</li>
-	<li>Bocala: Jorge Martinez</li>
-	<li>Bocala:  Kepa Larrea</li>
-	<li>Bocala: Unai Etxebarria</li>
+	<li>Bokala: Eneko Etxebarria</li>
+	<li>Bokala: Ignacio Kortazar</li>
+	<li>Bokala: Ekain Kortazar</li>
+	<li>Bokala: Ricardo Gonzalez</li>
+	<li>Bokala: Ibai Lekue</li>
+	<li>Bokala: Mikel Garcia</li>
+	<li>Bokala: Jorge Martinez</li>
+	<li>Bokala:  Kepa Larrea</li>
+	<li>Bokala: Unai Etxebarria</li>
       </ul>
       <h3>Kirol egitura</h3>
       <ul>
