Feature, the script now works for Basque and spanish. Basque it's main. Added Spanish text as well

--- a/indexes.html
+++ b/indexes.html
@@ -37,18 +37,18 @@
         <!--<a href="./index.html">Direktiba</a> |
         <a href="./index.html">Jokalariak</a> |
         <a href="./index.html">Helburuak</a> -->
-	<a href="indexes.html">Castellano</a>
+	<a href="index.html">Euskera</a>
       </div>
     </div>
 
     <div id="side-bar">
       <!-- ##### Left Sidebar ##### -->
       <div class="leftSideBar">
-        <p class="sideBarTitle">Iragarkiak</p>
+        <p class="sideBarTitle">Anuncios</p>
         <ul>
           <li>
 	    <a href="http://www.lemoa.net/eu-ES/Orrialdeak/default.aspx" >
-	      <img src="lemoa_logo.png" alt="Lemoako udala"/>
+	      <img src="lemoa_logo.png" alt="Ayuntamiento de Lemona"/>
 	    </a>
 	  </li>
 	  <li>
@@ -66,61 +66,61 @@
       <!-- ##### Right Sidebar ##### -->
 
       <div class="rightSideBar">
-        <p class="sideBarTitle">Berriak</p>
+        <p class="sideBarTitle">Noticias</p>
         <div class="sideBarText">
-<strong>2012.eko Abuztuak 6</strong><br />
-Web orria eguneratua
+<strong>6 de Agosto del 2012</strong><br />
+Actualizado el sitio web 
 	</div>
 
-        <p class="sideBarTitle">Balidazioa</p>
-        <div class="sideBarText">Balidatu orri honen <a href="http://validator.w3.org/check/referer">XHTML</a>
-          eta <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>-a.</div>
+        <p class="sideBarTitle">Validación</p>
+        <div class="sideBarText">Valida el <a href="http://validator.w3.org/check/referer">XHTML</a> y
+          <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> de esta página</div>
       </div>
 
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-      <h1 id="introduction" style="border-top: none; padding-top: 0;">Klubaren datuak</h1>
-      <p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.
-      </p>
-      <h3>Zuzendaritza</h3>
-      <ul>
-	<li>Presidentea: Alex Maguregi</li>
-	<li>Presidente ordea: Ugaitz Atxutegi</li>
-	<li>Idazkaria: Guruzne Delgado</li>
-	<li>Diruzaina: Eukeni Bikarregi</li>
-	<li>Bokala: Eneko Etxebarria</li>
-	<li>Bokala: Ignacio Kortazar</li>
-	<li>Bokala: Ekain Kortazar</li>
-	<li>Bokala: Ricardo Gonzalez</li>
-	<li>Bokala: Ibai Lekue</li>
-	<li>Bokala: Mikel Garcia</li>
-	<li>Bokala: Jorge Martinez</li>
-	<li>Bokala:  Kepa Larrea</li>
-	<li>Bokala: Unai Etxebarria</li>
-      </ul>
-      <h3>Kirol egitura</h3>
-      <ul>
-	<li>Kirol arduraduna: Eneko Etxebarria</li>
-	<li>Kirol koordinatzailea: Aitor Ateka</li>
-      </ul>
-      <p>
-	Guztira 90 ume daude izen emanda eta 100 inguru izantea estimatzen dugu 7 taldetan banatuta:
-      </p>
-      <ul>
-	<li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
-	<li>2 talde benjamin</li>
-	<li>1 talde alebin</li>
-	<li>1 talde infantil</li>
-      </ul>
-      <h1>Helburuak</h1>
-      <p>
-	Lemoako Harrobi Futbol Erakundea kiroal eta heziketa proiektu bat da. Futbolean erakutziaz, pertsonaren heziketa integrala laguntzea du helburu.
-      </p>
+      <h1 id="introduction" style="border-top: none; padding-top: 0;">Datos del club</h1>
+<p>Lemoako Harrobi Futbol Elkartea ha sido creado en Julio de 2012, inscribiéndose en los registros deportivos del Gobierno Vasco.
+</p>
+<h3>La junta directiva</h3>
+<ul>
+  <li>Presidente: Alex Maguregi</li>
+  <li>Vicepresidente: Ugaitz Atxutegi</li>
+  <li>Secretaria: Guruzne Delgado</li>
+  <li>Tesorero: Eukeni Bikarregi</li>
+  <li>Vocal: Eneko Etxebarria</li>
+  <li>Vocal: Ignacio Kortazar</li>
+  <li>Vocal: Ekain Kortazar</li>
+  <li>Vocal: Ricardo Gonzalez</li>
+  <li>Vocal: Ibai Lekue</li>
+  <li>Vocal: Mikel Garcia</li>
+  <li>Vocal: Jorge Martinez</li>
+  <li>Vocal:  Kepa Larrea</li>
+  <li>Vocal: Unai Etxebarria</li>
+</ul>
+<h3>Estructura deportiva</h3>
+<ul>
+  <li>Responsable Deportivo: Eneko Etxebarria</li>
+  <li>Coordinador Deportivo: Aitor Ateka</li>
+</ul>
+<p>
+  En total el club dispone en la actualidad de 90 niños inscritos y se estima que formaran parte aproximadamente 100 niños y niñas distribuidos en 7 equipos de la siguiente manera:
+</p>
+<ul>
+  <li>3 equipos de escuela de futbol, entre los 6 y 9 años</li>
+  <li>2 equipos benjamines</li>
+  <li>1 equipo alevín</li>
+  <li>1 equipo infantil</li>
+</ul>
+<h1>OBJETIVOS DEL CLUB</h1>
+<p>
+  Lemoako Harrobi Futbol Elkartea es un proyecto educativo y deportivo que a través de la enseñanza del futbol en todas sus dimensiones, procura contribuir a la formación integral de la persona. Se sustenta en un programa que tiene una orientación hacia conservar los valores que posee el ser humano, tendiendo a desarrollar el futbol como un sistema global y no solo una suma de capacidades y aptitudes innatas.
+</p>
     </div>      
     <div id="footer">
       <div class="doNotPrint">
-        Iradokizunak: iradokizunak@lemoakoharrobife.org
+        Sugerencias: iradokizunak@lemoakoharrobife.org
         <br />
 	<!--This theme is free for distriubtion,  so long as  link to openwebdesing.org and www.best10webhosting.net  stay on the theme-->
 	<span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a> &amp; 
