--- a/index.html
+++ b/index.html
@@ -80,43 +80,47 @@ Web orria eguneratua
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-      <h1 id="introduction" style="border-top: none; padding-top: 0;">Klubaren datuak</h1>
-      <p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.
-      </p>
-      <h3>Zuzendaritza</h3>
-      <ul>
-	<li>Presidentea: Alex Maguregi</li>
-	<li>Presidente ordea: Ugaitz Atxutegi</li>
-	<li>Idazkaria: Guruzne Delgado</li>
-	<li>Diruzaina: Eukeni Bikarregi</li>
-	<li>Bokala: Eneko Etxebarria</li>
-	<li>Bokala: Ignacio Kortazar</li>
-	<li>Bokala: Ekain Kortazar</li>
-	<li>Bokala: Ricardo Gonzalez</li>
-	<li>Bokala: Ibai Lekue</li>
-	<li>Bokala: Mikel Garcia</li>
-	<li>Bokala: Jorge Martinez</li>
-	<li>Bokala:  Kepa Larrea</li>
-	<li>Bokala: Unai Etxebarria</li>
-      </ul>
-      <h3>Kirol egitura</h3>
-      <ul>
-	<li>Kirol arduraduna: Eneko Etxebarria</li>
-	<li>Kirol koordinatzailea: Aitor Ateka</li>
-      </ul>
-      <p>
-	Guztira 90 ume daude izen emanda eta 100 inguru izantea estimatzen dugu 7 taldetan banatuta:
-      </p>
-      <ul>
-	<li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
-	<li>2 talde benjamin</li>
-	<li>1 talde alebin</li>
-	<li>1 talde infantil</li>
-      </ul>
-      <h1>Helburuak</h1>
-      <p>
-	Lemoako Harrobi Futbol Erakundea kiroal eta heziketa proiektu bat da. Futbolean erakutziaz, pertsonaren heziketa integrala laguntzea du helburu.
-      </p>
+<br/>
+<h2>
+Irailaren 9ko zozketaren zenbaki saritua 1938 izan da
+</h2>
+<h1>Klubaren datuak</h1>
+<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.
+</p>
+<h3>Zuzendaritza</h3>
+<ul>
+  <li>Presidentea: Alex Maguregi</li>
+  <li>Presidente ordea: Ugaitz Atxutegi</li>
+  <li>Idazkaria: Guruzne Delgado</li>
+  <li>Diruzaina: Eukeni Bikarregi</li>
+  <li>Bokala: Eneko Etxebarria</li>
+  <li>Bokala: Ignacio Kortazar</li>
+  <li>Bokala: Ekain Kortazar</li>
+  <li>Bokala: Ricardo Gonzalez</li>
+  <li>Bokala: Ibai Lekue</li>
+  <li>Bokala: Mikel Garcia</li>
+  <li>Bokala: Jorge Martinez</li>
+  <li>Bokala:  Kepa Larrea</li>
+  <li>Bokala: Unai Etxebarria</li>
+</ul>
+<h3>Kirol egitura</h3>
+<ul>
+  <li>Kirol arduraduna: Eneko Etxebarria</li>
+  <li>Kirol koordinatzailea: Aitor Ateka</li>
+</ul>
+<p>
+  Guztira 90 ume daude izen emanda eta 100 inguru izantea estimatzen dugu 7 taldetan banatuta:
+</p>
+<ul>
+  <li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
+  <li>2 talde benjamin</li>
+  <li>1 talde alebin</li>
+  <li>1 talde infantil</li>
+</ul>
+<h1>Helburuak</h1>
+<p>
+  Lemoako Harrobi Futbol Erakundea kiroal eta heziketa proiektu bat da. Futbolean erakutziaz, pertsonaren heziketa integrala laguntzea du helburu.
+</p>
     </div>      
     <div id="footer">
       <div class="doNotPrint">
