--- a/indexes.html
+++ b/indexes.html
@@ -80,7 +80,9 @@ Actualizado el sitio web
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-      <h1 id="introduction" style="border-top: none; padding-top: 0;">Datos del club</h1>
+
+<h2>El numero premiado del sorteo del 7 de septiembre ha sido el 1938</h2>
+<h1 id="introduction" style="border-top: none; padding-top: 0;">Datos del club</h1>
 <p>Lemoako Harrobi Futbol Elkartea ha sido creado en Julio de 2012, inscribiéndose en los registros deportivos del Gobierno Vasco.
 </p>
 <h3>La junta directiva</h3>
