The added winner

--- a/body_eu_index.html
+++ b/body_eu_index.html
@@ -1,10 +1,9 @@
 <br/>
 <h2>
-Irailaren 9ko zozketaren zenbaki saritua 1938 izan da
+Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
 </h2>
 <h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.
-</p>
+<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
 <h3>Zuzendaritza</h3>
 <ul>
   <li>Presidentea: Alex Maguregi</li>
