--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="./gila-screen.css" media="screen" title="Gila (screen)" />
     <link rel="stylesheet" type="text/css" href="./gila-print.css" media="print" />
 
-    <title>Lemoako Harrobi Futbol Erakundea </title>
+    <title>Lemoako Harrobi Futbol klub </title>
 </head>
 
   <body>
@@ -30,7 +30,7 @@
 
     <div id="header">
       <h1 class="headerTitle">
-        <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Erakundea</span></a>
+        <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Klub</span></a>
       </h1>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation: </span>
@@ -61,6 +61,12 @@
 	      <img src="logo-bikain.png" alt="Imprenta bikain"/>
 	    </a>
 	  </li>
+	  <li style="background-color:#000;">
+	    <a href="http://abgarbiketak.com" >
+	      <img src="garbiketa_logo.png" alt="A.B. garbiketak"/>
+	    </a>
+	  </li>
+	    
         </ul>
       </div>
       <!-- ##### Right Sidebar ##### -->
@@ -82,11 +88,10 @@ Web orria eguneratua
     <div id="main-copy">
 <br/>
 <h2>
-Irailaren 9ko zozketaren zenbaki saritua 1938 izan da
+Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
 </h2>
 <h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.
-</p>
+<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
 <h3>Zuzendaritza</h3>
 <ul>
   <li>Presidentea: Alex Maguregi</li>
