--- a/indexes.html
+++ b/indexes.html
@@ -81,7 +81,7 @@ Actualizado el sitio web
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
 
-<h2>El numero premiado del sorteo del 7 de septiembre ha sido el 1938</h2>
+<h2>El premiado del sorteo del 7 de septiembre ha sido Xabier Mancisidor de la Fuente</h2>
 <h1 id="introduction" style="border-top: none; padding-top: 0;">Datos del club</h1>
 <p>Lemoako Harrobi Futbol Elkartea ha sido creado en Julio de 2012, inscribiéndose en los registros deportivos del Gobierno Vasco.
 </p>
