The added winner

--- a/indexes.html
+++ b/indexes.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="./gila-screen.css" media="screen" title="Gila (screen)" />
     <link rel="stylesheet" type="text/css" href="./gila-print.css" media="print" />
 
-    <title>Lemoako Harrobi Futbol Erakundea </title>
+    <title>Lemoako Harrobi Futbol Klub</title>
 </head>
 
   <body>
@@ -30,7 +30,7 @@
 
     <div id="header">
       <h1 class="headerTitle">
-        <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Erakundea</span></a>
+        <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Klub</span></a>
       </h1>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation: </span>
@@ -81,7 +81,7 @@ Actualizado el sitio web
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
 
-<h2>El premiado del sorteo del 7 de septiembre ha sido Xabier Mancisidor de la Fuente</h2>
+<h2>El ganador del sorteo 7 Septiembre es Xabier Mancisidor de la Fuente</h2>
 <h1 id="introduction" style="border-top: none; padding-top: 0;">Datos del club</h1>
 <p>Lemoako Harrobi Futbol Elkartea ha sido creado en Julio de 2012, inscribiéndose en los registros deportivos del Gobierno Vasco.
 </p>
