Added A.B. Garbiketak add

--- a/body_es_index.html
+++ b/body_es_index.html
@@ -1,6 +1,5 @@
-
 <h2>El ganador del sorteo 7 Septiembre es Xabier Mancisidor de la Fuente</h2>
-<h1 id="introduction" style="border-top: none; padding-top: 0;">Datos del club</h1>
+<h1>Datos del club</h1>
 <p>Lemoako Harrobi Futbol Elkartea ha sido creado en Julio de 2012, inscribiéndose en los registros deportivos del Gobierno Vasco.
 </p>
 <h3>La junta directiva</h3>
