--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@ Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
   <li>Kirol koordinatzailea: Aitor Ateka</li>
 </ul>
 <p>
-  Guztira 90 ume daude izen emanda eta 100 inguru izantea estimatzen dugu 7 taldetan banatuta:
+  Guztira 90 ume daude izen emanda eta 100 inguru izatea estimatzen dugu 7 taldetan banatuta:
 </p>
 <ul>
   <li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
-  <li>2 talde benjamin</li>
-  <li>1 talde alebin</li>
-  <li>1 talde infantil</li>
+  <li>Benjamin talde 2</li>
+  <li>Alebin talde bat</li>
+  <li>Infantil talde bat</li>
 </ul>
 <h1>Helburuak</h1>
 <p>
-  Lemoako Harrobi Futbol Erakundea kiroal eta heziketa proiektu bat da. Futbolean erakutziaz, pertsonaren heziketa integrala laguntzea du helburu.
+  Lemoako Harrobi Futbol Erakundea kirol eta heziketa proiektu bat da. Futbolean erakutsiaz, pertsonaren heziketa integrala laguntzea du helburu.
 </p>
     </div>      
     <div id="footer">
