New files and more pages

--- a/body_eu_index.html
+++ b/body_eu_index.html
@@ -1,39 +1,13 @@
-<h2>
-Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
-</h2>
+<h1>Berriak</h1>
+<h3>2012.eko Irailak 20</h3>
+<p>
+  Atzo, Arlonagusia futbol zelaian, Lemoako Harrobi Futbol Klubeko proiektuaren partaide izango diren umeen gurasoekin batzarra egin zan. Bertan, proiektuaren kirol eta heziketa helburuak azaldu ziran eta Astore enpresak gure taldearentzat egindako kamiseta diseinu bakar eta pertsonalizatuaren aurkezpena egin zan.
+</p>
+<h3>2012.eko Irailak 7</h3>
+<p>
+  Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
+</p>
+
 <h1>Klubaren datuak</h1>
 <p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
-<h3>Zuzendaritza</h3>
-<ul>
-  <li>Presidentea: Alex Maguregi</li>
-  <li>Presidente ordea: Ugaitz Atxutegi</li>
-  <li>Idazkaria: Guruzne Delgado</li>
-  <li>Diruzaina: Eukeni Bikarregi</li>
-  <li>Bokala: Eneko Etxebarria</li>
-  <li>Bokala: Ignacio Kortazar</li>
-  <li>Bokala: Ekain Kortazar</li>
-  <li>Bokala: Ricardo Gonzalez</li>
-  <li>Bokala: Ibai Lekue</li>
-  <li>Bokala: Mikel Garcia</li>
-  <li>Bokala: Jorge Martinez</li>
-  <li>Bokala:  Kepa Larrea</li>
-  <li>Bokala: Unai Etxebarria</li>
-</ul>
-<h3>Kirol egitura</h3>
-<ul>
-  <li>Kirol arduraduna: Eneko Etxebarria</li>
-  <li>Kirol koordinatzailea: Aitor Ateka</li>
-</ul>
-<p>
-  Guztira 90 ume daude izen emanda eta 100 inguru izatea estimatzen dugu 7 taldetan banatuta:
-</p>
-<ul>
-  <li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
-  <li>Benjamin talde 2</li>
-  <li>Alebin talde bat</li>
-  <li>Infantil talde bat</li>
-</ul>
-<h1>Helburuak</h1>
-<p>
-  Lemoako Harrobi Futbol Erakundea kirol eta heziketa proiektu bat da. Futbolean erakutsiaz, pertsonaren heziketa integrala laguntzea du helburu.
-</p>
+
