--- a/goals.html
+++ b/goals.html
@@ -76,19 +76,10 @@
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-<h1>Berriak</h1>
-<h3>2012.eko Irailak 20</h3>
+<h1>Helburuak</h1>
 <p>
-  Atzo, Arlonagusia futbol zelaian, Lemoako Harrobi Futbol Klubeko proiektuaren partaide izango diren umeen gurasoekin batzarra egin zan. Bertan, proiektuaren kirol eta heziketa helburuak azaldu ziran eta Astore enpresak gure taldearentzat egindako kamiseta diseinu bakar eta pertsonalizatuaren aurkezpena egin zan.
+  Lemoako Harrobi Futbol Erakundea kirol eta heziketa proiektu bat da. Futbolean erakutsiaz, pertsonaren heziketa integrala laguntzea du helburu.
 </p>
-<h3>2012.eko Irailak 7</h3>
-<p>
-  Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
-</p>
-
-<h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
-
     </div>      
     <div id="footer">
       <div class="doNotPrint">
