--- a/goalses.html
+++ b/goalses.html
@@ -16,34 +16,35 @@
     <link rel="index"    href="./index.html" title="Site map" />
     <link rel="stylesheet" type="text/css" href="./gila-screen.css" media="screen" title="Gila (screen)" />
     <link rel="stylesheet" type="text/css" href="./gila-print.css" media="print" />
-    <title>Lemoako Harrobi Futbol klub </title>
+    <title>Lemoako Harrobi Futbol Klub</title>
 </head>
+  
   <body>
     <!-- For non-visual user agents: -->
-    <div id="top"><a href="#main-copy" class="doNotDisplay doNotPrint">Skip to main content.</a></div>
+      <div id="top"><a href="#main-copy" class="doNotDisplay doNotPrint">Skip to main content.</a></div>
     <!-- ##### Header ##### -->
     <div id="header">
       <h1 class="headerTitle">
         <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Klub</span></a>
-	<a class="language" href="indexes.html">Castellano</a>
+	<a class="language" href="index.html">Euskera</a>
       </h1>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation: </span>
-	<a href="index.html">Berriak</a>
-	<a href="organization.html">Direktiba</a>
-	<a href="facilities.html">Instalazioak</a>
-	<a href="goals.html">Helburuak</a>
-	<a href="structure.html">Kiroal egitura</a>
+	<a href="indexes.html">Noticias</a>
+	<a href="organizationes.html">Directiva</a>
+	<a href="facilitieses.html">Instalaciones</a>
+	<a href="goalses.html">Objetivos</a>
+	<a href="structurees.html">Estructura deportiva</a>
       </div>
     </div>
     <div id="side-bar">
       <!-- ##### Left Sidebar ##### -->
       <div class="leftSideBar">
-        <p class="sideBarTitle">Iragarkiak</p>
+        <p class="sideBarTitle">Anuncios</p>
         <ul>
           <li>
 	    <a href="http://www.lemoa.net/eu-ES/Orrialdeak/default.aspx" >
-	      <img src="lemoa_logo.png" alt="Lemoako udala"/>
+	      <img src="lemoa_logo.png" alt="Ayuntamiento de Lemona"/>
 	    </a>
 	  </li>
 	  <li>
@@ -64,35 +65,28 @@
         </ul>
       </div>
       <!-- ##### Right Sidebar ##### -->
+
       <div class="rightSideBar">
-        <p class="sideBarTitle">Berriak</p>
+        <p class="sideBarTitle">Noticias</p>
         <div class="sideBarText">
 	</div>
-        <p class="sideBarTitle">Balidazioa</p>
-        <div class="sideBarText">Balidatu orri honen <a href="http://validator.w3.org/check/referer">XHTML</a>
-          eta <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>-a.</div>
+
+        <p class="sideBarTitle">Validación</p>
+        <div class="sideBarText">Valida el <a href="http://validator.w3.org/check/referer">XHTML</a> y
+          <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> de esta página</div>
       </div>
 
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-<h1>Berriak</h1>
-<h3>2012.eko Irailak 20</h3>
+<h1>OBJETIVOS DEL CLUB</h1>
 <p>
-  Atzo, Arlonagusia futbol zelaian, Lemoako Harrobi Futbol Klubeko proiektuaren partaide izango diren umeen gurasoekin batzarra egin zan. Bertan, proiektuaren kirol eta heziketa helburuak azaldu ziran eta Astore enpresak gure taldearentzat egindako kamiseta diseinu bakar eta pertsonalizatuaren aurkezpena egin zan.
+  Lemoako Harrobi Futbol Elkartea es un proyecto educativo y deportivo que a través de la enseñanza del futbol en todas sus dimensiones, procura contribuir a la formación integral de la persona. Se sustenta en un programa que tiene una orientación hacia conservar los valores que posee el ser humano, tendiendo a desarrollar el futbol como un sistema global y no solo una suma de capacidades y aptitudes innatas.
 </p>
-<h3>2012.eko Irailak 7</h3>
-<p>
-  Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
-</p>
-
-<h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
-
     </div>      
     <div id="footer">
       <div class="doNotPrint">
-        Iradokizunak: iradokizunak@lemoakoharrobife.org
+        Sugerencias: iradokizunak@lemoakoharrobife.org
         <br />
 	<!--This theme is free for distriubtion,  so long as  link to openwebdesing.org and www.best10webhosting.net  stay on the theme-->
 	<span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a> &amp; 
