--- a/indexes.html
+++ b/indexes.html
@@ -26,13 +26,15 @@
     <div id="header">
       <h1 class="headerTitle">
         <a href="./index" title="Browse to homepage">Lemoako <span>Harrobi</span> Futbol <span>Klub</span></a>
+	<a class="language" href="index.html">Euskera</a>
       </h1>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation: </span>
-        <!--<a href="./index.html">Direktiba</a> |
-        <a href="./index.html">Jokalariak</a> |
-        <a href="./index.html">Helburuak</a> -->
-	<a href="index.html">Euskera</a>
+	<a href="indexes.html">Noticias</a>
+	<a href="organizationes.html">Directiva</a>
+	<a href="facilitieses.html">Instalaciones</a>
+	<a href="goalses.html">Objetivos</a>
+	<a href="structurees.html">Estructura deportiva</a>
       </div>
     </div>
     <div id="side-bar">
@@ -67,8 +69,6 @@
       <div class="rightSideBar">
         <p class="sideBarTitle">Noticias</p>
         <div class="sideBarText">
-<strong>13 de Septiembre del 2012</strong><br />
-Actualizado el sitio web 
 	</div>
 
         <p class="sideBarTitle">Validación</p>
@@ -79,43 +79,16 @@ Actualizado el sitio web
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-<h2>El ganador del sorteo 7 Septiembre es Xabier Mancisidor de la Fuente</h2>
+<h1>Noticias</h1>
+<h3>20 de Septiembre del 2012</h3>
+<p>
+  Ayer se efectuo la reunion informativa en el campo de Arlonagusia con los padres/madres de los niñ@s que formaran parte del proyecto de Lemoako Harrobi Futbol Klub. En el se informo de los objetivos deportivos y educativos para esta nueva temporada. Ademas de presentar a los mismos el diseño de la camiseta personalizada e unica diseñada por la marca Astore.
+</p>
+<h3>7 de Septiembre del 2012</h3>
+
+<p>El ganador del sorteo 7 Septiembre es Xabier Mancisidor de la Fuente</p>
 <h1>Datos del club</h1>
 <p>Lemoako Harrobi Futbol Elkartea ha sido creado en Julio de 2012, inscribiéndose en los registros deportivos del Gobierno Vasco.
-</p>
-<h3>La junta directiva</h3>
-<ul>
-  <li>Presidente: Alex Maguregi</li>
-  <li>Vicepresidente: Ugaitz Atxutegi</li>
-  <li>Secretaria: Guruzne Delgado</li>
-  <li>Tesorero: Eukeni Bikarregi</li>
-  <li>Vocal: Eneko Etxebarria</li>
-  <li>Vocal: Ignacio Kortazar</li>
-  <li>Vocal: Ekain Kortazar</li>
-  <li>Vocal: Ricardo Gonzalez</li>
-  <li>Vocal: Ibai Lekue</li>
-  <li>Vocal: Mikel Garcia</li>
-  <li>Vocal: Jorge Martinez</li>
-  <li>Vocal:  Kepa Larrea</li>
-  <li>Vocal: Unai Etxebarria</li>
-</ul>
-<h3>Estructura deportiva</h3>
-<ul>
-  <li>Responsable Deportivo: Eneko Etxebarria</li>
-  <li>Coordinador Deportivo: Aitor Ateka</li>
-</ul>
-<p>
-  En total el club dispone en la actualidad de 90 niños inscritos y se estima que formaran parte aproximadamente 100 niños y niñas distribuidos en 7 equipos de la siguiente manera:
-</p>
-<ul>
-  <li>3 equipos de escuela de futbol, entre los 6 y 9 años</li>
-  <li>2 equipos benjamines</li>
-  <li>1 equipo alevín</li>
-  <li>1 equipo infantil</li>
-</ul>
-<h1>OBJETIVOS DEL CLUB</h1>
-<p>
-  Lemoako Harrobi Futbol Elkartea es un proyecto educativo y deportivo que a través de la enseñanza del futbol en todas sus dimensiones, procura contribuir a la formación integral de la persona. Se sustenta en un programa que tiene una orientación hacia conservar los valores que posee el ser humano, tendiendo a desarrollar el futbol como un sistema global y no solo una suma de capacidades y aptitudes innatas.
 </p>
     </div>      
     <div id="footer">
