--- a/structure.html
+++ b/structure.html
@@ -76,19 +76,20 @@
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-<h1>Berriak</h1>
-<h3>2012.eko Irailak 20</h3>
+<h1>Kirol egitura</h1>
+<ul>
+  <li>Kirol arduraduna: Eneko Etxebarria</li>
+  <li>Kirol koordinatzailea: Aitor Ateka</li>
+</ul>
 <p>
-  Atzo, Arlonagusia futbol zelaian, Lemoako Harrobi Futbol Klubeko proiektuaren partaide izango diren umeen gurasoekin batzarra egin zan. Bertan, proiektuaren kirol eta heziketa helburuak azaldu ziran eta Astore enpresak gure taldearentzat egindako kamiseta diseinu bakar eta pertsonalizatuaren aurkezpena egin zan.
+  Guztira 90 ume daude izen emanda eta 100 inguru izatea estimatzen dugu 7 taldetan banatuta:
 </p>
-<h3>2012.eko Irailak 7</h3>
-<p>
-  Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
-</p>
-
-<h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
-
+<ul>
+  <li>3 futbol eskola talde 6 eta 9 urte bitarteko umeentzat</li>
+  <li>Benjamin talde 2</li>
+  <li>Alebin talde bat</li>
+  <li>Infantil talde bat</li>
+</ul>
     </div>      
     <div id="footer">
       <div class="doNotPrint">
