--- a/facilities.html
+++ b/facilities.html
@@ -76,19 +76,26 @@
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-<h1>Berriak</h1>
-<h3>2012.eko Irailak 20</h3>
-<p>
-  Atzo, Arlonagusia futbol zelaian, Lemoako Harrobi Futbol Klubeko proiektuaren partaide izango diren umeen gurasoekin batzarra egin zan. Bertan, proiektuaren kirol eta heziketa helburuak azaldu ziran eta Astore enpresak gure taldearentzat egindako kamiseta diseinu bakar eta pertsonalizatuaren aurkezpena egin zan.
-</p>
-<h3>2012.eko Irailak 7</h3>
-<p>
-  Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
-</p>
+<h1>INSTALAZIOAK</h1>
+ 
+<h3>Arlonagusiako Futbol Zelaia:</h3>
+    Neurriak: 103 x 63 m.<br/>
+    Edukiera: 700 ikusle<br/>
+    Belar naturala<br/>
+    Argiztapen artifiziala<br/>
+    Tribuna estalia<br/>
 
-<h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
+<img src="arlonagusia.png" alt="Arlonagusia zelaia"/> <br/>
+Arlonagusiako Futbol Zelaian benjamin, alebin eta infantilen taldeak entrenatu eta partidu ofizialak jokatuko dabe.
+<br/>
 
+ 
+<h3>Lemoako Udal Polikiroldegia:</h3>
+
+Areto-futboleko kantxa<br/>
+<img src="polikiroldegia1.png" alt="Lemoako porikiroldegia"/><br/>
+<img src="polikiroldegia2.png" alt="Lemoako porikiroldegia"/><br/>
+Lemoako Udal Polikiroldegian, futbol eskolako taldeek entrenatuko dabe.<br/>
     </div>      
     <div id="footer">
       <div class="doNotPrint">
