--- a/organization.html
+++ b/organization.html
@@ -76,19 +76,22 @@
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
-<h1>Berriak</h1>
-<h3>2012.eko Irailak 20</h3>
-<p>
-  Atzo, Arlonagusia futbol zelaian, Lemoako Harrobi Futbol Klubeko proiektuaren partaide izango diren umeen gurasoekin batzarra egin zan. Bertan, proiektuaren kirol eta heziketa helburuak azaldu ziran eta Astore enpresak gure taldearentzat egindako kamiseta diseinu bakar eta pertsonalizatuaren aurkezpena egin zan.
-</p>
-<h3>2012.eko Irailak 7</h3>
-<p>
-  Irailaren 7ko zozketan saritua Xabier Mancisidor de la Fuente izan da
-</p>
-
-<h1>Klubaren datuak</h1>
-<p>Lemoako harrobi futbol taldea, 2012. urtean sortu da, Eusko Jaurlaritzako erregistroetan izen emanaz.</p>
-
+<h1>Zuzendaritza</h1>
+<ul>
+  <li>Presidentea: Alex Maguregi</li>
+  <li>Presidente ordea: Ugaitz Atxutegi</li>
+  <li>Idazkaria: Guruzne Delgado</li>
+  <li>Diruzaina: Eukeni Bikarregi</li>
+  <li>Bokala: Eneko Etxebarria</li>
+  <li>Bokala: Ignacio Kortazar</li>
+  <li>Bokala: Ekain Kortazar</li>
+  <li>Bokala: Ricardo Gonzalez</li>
+  <li>Bokala: Ibai Lekue</li>
+  <li>Bokala: Mikel Garcia</li>
+  <li>Bokala: Jorge Martinez</li>
+  <li>Bokala:  Kepa Larrea</li>
+  <li>Bokala: Unai Etxebarria</li>
+</ul>
     </div>      
     <div id="footer">
       <div class="doNotPrint">
