--- a/goalses.html
+++ b/goalses.html
@@ -62,6 +62,16 @@
 	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
 	    </a>
 	  </li>
+	  <li>
+	    <a href="http://www.bombas-ideal.com/Bombas-Ideal-Index.asp" >
+	      <img src="bombas_ideal.png" alt="Ideal bombak"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://www.thyssenkruppelevadores.es/" >
+	      <img src="thyssenkrupp.png" alt="ThyssenKrupp Elevadores"/>
+	    </a>
+	  </li>
         </ul>
       </div>
       <!-- ##### Right Sidebar ##### -->
