--- a/structure.html
+++ b/structure.html
@@ -57,6 +57,16 @@
 	    </a>
 	  </li>
 	  <li>
+	    <a href="http://www.bombas-ideal.com/Bombas-Ideal-Index.asp" >
+	      <img src="bombas_ideal.png" alt="Ideal bombak"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://www.thyssenkruppelevadores.es/" >
+	      <img src="thyssenkrupp.png" alt="ThyssenKrupp Elevadores"/>
+	    </a>
+	  </li>
+	   <li>
 	    <a href="http://abgarbiketak.com" >
 	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
 	    </a>
