--- a/goals.html
+++ b/goals.html
@@ -66,6 +66,21 @@
 	      <img src="thyssenkrupp.png" alt="ThyssenKrupp Elevadores"/>
 	    </a>
 	  </li>
+	  <li>
+	    <a href="#" >
+	      <img src="arratia_recambios.png" alt="Arratia recambios"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://www.grupocosentino.es/" >
+	      <img src="cosentino.png" alt="Grupo consentino"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://joamesl.com/" >
+	      <img src="joame.png" alt="Joame S.L."/>
+	    </a>
+	  </li>
 	   <li>
 	    <a href="http://abgarbiketak.com" >
 	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
