--- a/goalses.html
+++ b/goalses.html
@@ -58,18 +58,33 @@
 	    </a>
 	  </li>
 	  <li>
-	    <a href="http://abgarbiketak.com" >
-	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
-	    </a>
-	  </li>
-	  <li>
 	    <a href="http://www.bombas-ideal.com/Bombas-Ideal-Index.asp" >
-	      <img src="bombas_ideal.png" alt="Ideal bombak"/>
+	      <img src="bombas_ideal.png" alt="Bombas ideal"/>
 	    </a>
 	  </li>
 	  <li>
 	    <a href="http://www.thyssenkruppelevadores.es/" >
 	      <img src="thyssenkrupp.png" alt="ThyssenKrupp Elevadores"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="#" >
+	      <img src="arratia_recambios.png" alt="Arratia recambios"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://www.grupocosentino.es/" >
+	      <img src="cosentino.png" alt="Grupo consentino"/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://joamesl.com/" >
+	      <img src="joame.png" alt="Joame S.L."/>
+	    </a>
+	  </li>
+	  <li>
+	    <a href="http://abgarbiketak.com" >
+	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
 	    </a>
 	  </li>
         </ul>
