--- a/goals.html
+++ b/goals.html
@@ -33,7 +33,7 @@
 	<a href="organization.html">Direktiba</a>
 	<a href="facilities.html">Instalazioak</a>
 	<a href="goals.html">Helburuak</a>
-	<a href="structure.html">Kiroal egitura</a>
+	<a href="structure.html">Kirol egitura</a>
       </div>
     </div>
     <div id="side-bar">
