--- a/goalses.html
+++ b/goalses.html
@@ -67,6 +67,13 @@
 	      <img src="thyssenkrupp.png" alt="ThyssenKrupp Elevadores"/>
 	    </a>
 	  </li>
+        </ul>
+      </div>
+      <!-- ##### Right Sidebar ##### -->
+
+      <div class="rightSideBar">
+        <p class="sideBarTitle">Anuncios</p>
+	<ul>
 	  <li>
 	    <a href="#" >
 	      <img src="arratia_recambios.png" alt="Arratia recambios"/>
@@ -87,18 +94,7 @@
 	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
 	    </a>
 	  </li>
-        </ul>
-      </div>
-      <!-- ##### Right Sidebar ##### -->
-
-      <div class="rightSideBar">
-        <p class="sideBarTitle">Noticias</p>
-        <div class="sideBarText">
-	</div>
-
-        <p class="sideBarTitle">Validación</p>
-        <div class="sideBarText">Valida el <a href="http://validator.w3.org/check/referer">XHTML</a> y
-          <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> de esta página</div>
+	</ul>
       </div>
 
     </div>
@@ -111,14 +107,14 @@
     </div>      
     <div id="footer">
       <div class="doNotPrint">
-        Sugerencias: iradokizunak@lemoakoharrobife.org
+        Sugerencias: <strong>iradokizunak@lemoakoharrobife.org</strong>
         <br />
+	Valida el <a href="http://validator.w3.org/check/referer">XHTML</a> y
+          <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> de esta página<br/>
 	<!--This theme is free for distriubtion,  so long as  link to openwebdesing.org and www.best10webhosting.net  stay on the theme-->
-	<span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a> &amp; 
+	<span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a>,
+	  <a href="www.best10webhosting.net" target="_blank">Best 10 web hostings</a> &amp; 
 	  <a href="http://zebixe.com" target="_blank">Zebixe</a> </span></div>
-      <div>
-        Copyright &copy; 2012, LHFT
-      </div>
     </div>
   </body>
 </html>
