--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 	      <img src="thyssenkrupp.png" alt="ThyssenKrupp Elevadores"/>
 	    </a>
 	  </li>
+        </ul>
+      </div>
+      <!-- ##### Right Sidebar ##### -->
+      <div class="rightSideBar">
+        <p class="sideBarTitle">Iragarkiak</p>
+	<ul>
 	  <li>
 	    <a href="#" >
 	      <img src="arratia_recambios.png" alt="Arratia recambios"/>
@@ -86,18 +92,7 @@
 	      <img src="garbiketa_logo.png" alt="A.B. Garbiketak"/>
 	    </a>
 	  </li>
-        </ul>
-      </div>
-      <!-- ##### Right Sidebar ##### -->
-      <div class="rightSideBar">
-        <p class="sideBarTitle">Berriak</p>
-        <div class="sideBarText">
-	</div>
-        <p class="sideBarTitle">Balidazioa</p>
-        <div class="sideBarText">Balidatu orri honen <a href="http://validator.w3.org/check/referer">XHTML</a>
-          eta <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>-a.</div>
-      </div>
-
+	</ul>
     </div>
     <!-- ##### Main Copy ##### -->
     <div id="main-copy">
@@ -117,14 +112,14 @@
     </div>      
     <div id="footer">
       <div class="doNotPrint">
-        Iradokizunak: iradokizunak@lemoakoharrobife.org
+        Iradokizunak: <strong>iradokizunak@lemoakoharrobife.org</strong>
         <br />
+	Balidatu orri honen <a href="http://validator.w3.org/check/referer">XHTML</a>
+          eta <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>-a.<br/>
 	<!--This theme is free for distriubtion,  so long as  link to openwebdesing.org and www.best10webhosting.net  stay on the theme-->
-	<span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a> &amp; 
+	<span class="nocopyright">Courtesy of <a href="http://www.openwebdesign.org" target="_blank">Open Web Design</a>,
+	  <a href="www.best10webhosting.net" target="_blank">Best 10 web hostings</a> &amp; 
 	  <a href="http://zebixe.com" target="_blank">Zebixe</a> </span></div>
-      <div>
-        Copyright &copy; 2012, LHFT
-      </div>
     </div>
   </body>
 </html>
